fixing spacing and screen size errors

--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,6 +1,8 @@
 .container {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  /* width: 100vw; */
+  /* height:fit-content;
+  width: fit-content; */
   font-family: 'Rubik';
   background-color: #E2DCDE;
 }
@@ -107,6 +109,7 @@
   margin: 5%; 
   display: flex;
   flex-direction: column;
+  margin-bottom:0%;
 }
 
 .single-column-layout{
@@ -156,14 +159,14 @@
 }
 
 .resume-body{
-  padding-bottom: 40%;
   display: flex;
   font-size: 24px;
   font-family:'Rubik';
   justify-content: center !important;
-  align-items: center !important;
+  align-items: right !important;
   justify-self: center;
   flex-direction: column;
+  margin-left: 10%;
 }
 
 .anabels-image {
@@ -208,6 +211,13 @@
   margin-top: -5%;
 }
 
+.about-contact{
+  display: flex;
+  flex-direction: row;
+  margin-left: 7%;
+  padding-bottom: 20%;
+}
+
 .resumebtntext{
   /* color: #2D2D34; */
   /* color:white; */
@@ -228,7 +238,7 @@
   .linkedin{
     height: 15vh;
     width: 15vw;
-    margin:2%;
+    margin: 2%;
   }
   
 
